2000-05-21  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.h (SCM_[SET_]CELL_{WORD,OBJECT}, SCM_VALIDATE_CELL): brought
 	the yucky, ugly and nasty conditional compilation back.  sorry,
 	but it was either that or requiring GAWK to build Guile.
	(lots of places): removed the code that implemented the old GC
 	scheme.

	* init.c (scm_boot_guile_1): removed the code conditioned on
 	!GUILE_NEW_GC_SCHEME.

	* __scm.h: (GUILE_NEW_GC_SCHEME): removed.

	* gc.c (scm_protect_object, scm_unprotect_object): change the
 	implementation to more efficient (at least in the time complexity
 	sense).  the calls should now also be thread-safe -- I suspect
 	that people expect them to be.  (thanks to Han-Wen Nienhuys)
	(lots of places): removed the code that implemented the old GC
 	scheme.

	* hashtab.c (scm_hash_fn_create_handle_x): add missing
	SCM_REALLOW_INTS before return.  I really wonder about the
	possible interactions between hashtables, threads & GC.  it
	doesn't look healthy at all. 

2000-05-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* unif.c (scm_bit_count):  Fixed the parameter checks.  Thanks to
	Dale P. Smith.

2000-05-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_DEBUG_CELL_ACCESSES), gc.h (SCM_):  Added as a new
	debug option to verify all accesses to cells actually access
	objects on the heap.

	* gc.h (SCM_VALIDATE_CELL):  Added.  Only performs validation if
	SCM_DEBUG_CELL_ACCESSES is set to 1.

	(SCM_CELL_WORD, SCM_CELL_OBJECT, SCM_SET_CELL_WORD,
	SCM_SET_CELL_OBJECT):  Use SCM_VALIDATE_CELL to check every cell
	that is accessed.

2000-05-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gh_data.c (gh_scm2chars, gh_scm2shorts, gh_scm2longs,
	gh_scm2floats, gh_scm2doubles):  Change !SCM_NIMP to SCM_IMP.

	* gc.c (scm_cellp):  Fixed and simplified.

	* throw.c (JBJMPBUF, SETJBJMPBUF, SCM_JBDFRAME, SCM_SETJBDFRAME,
	make_jmpbuf, scm_init_throw):  Now using double cells to represent
	jump buffers when using debug extensions.

	(freejb):  Removed.
